--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit
-pandas
-requests
-openpyxl
-xlrd>=2.0.1
+streamlit==1.36.0
+pandas==2.2.2
+numpy==1.26.4
+scipy==1.13.1
+requests==2.32.3
+xlrd==2.0.1        # для .xls НБУ
+openpyxl==3.1.2    # якщо захочеш зберігати в .xlsx
