--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 streamlit==1.36.0
 pandas==2.2.2
 numpy==1.26.4
-scipy==1.13.1
 requests==2.32.3
-xlrd==2.0.1        # для .xls НБУ
-openpyxl==3.1.2    
+xlrd==2.0.1
+openpyxl==3.1.2
