--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit==1.36.0
-pandas==2.2.2
-numpy==1.26.4
-requests==2.32.3
-xlrd==2.0.1
-openpyxl==3.1.2
+streamlit>=1.34,<2
+pandas>=2.2
+numpy>=1.26
+requests>=2.31
+openpyxl>=3.1
+python-dateutil>=2.8
+
